infrastructure/kgateway/httproutes/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: production
spec:
  parentRefs:
    - name: prod
      namespace: kgateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana
      backendRefs:
        - name: monitoring-grafana
          namespace: monitoring
          port: 80
